Finished all the basic syntax. Except for tables. Tested very basic cases.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,21 +6,20 @@ set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
 
 #add_executable(testLineMarks
 #        test/testLineMarks.cpp
-#        src/cppmark.cpp
-#        src/state_block.cpp)
+#        src/cppmark.cpp)
 
 #add_executable(testTokens
 #        test/testTokens.cpp
-#        src/cppmark.cpp
-#        src/state_block.cpp)
+#        src/cppmark.cpp)
 
 #add_executable(testRegex
 #        src/main.cpp
 #        src/block.cpp)
 
-add_executable(testLexer
+add_executable(tests
         src/main.cpp
         src/parser.cpp
-        src/doc.cpp
         src/token.cpp
-        )
+        src/rules.cpp
+        src/renderer.cpp
+        src/options.cpp)
